[gd_scene load_steps=20 format=3 uid="uid://qxbuvt8hma11"]

[ext_resource type="Script" uid="uid://c3ttu1r0aufof" path="res://Scripts/volume_slider.gd" id="1_0rqdt"]
[ext_resource type="Texture2D" uid="uid://bee6622a4jkol" path="res://Assets/slider.png" id="1_pm22v"]
[ext_resource type="FontFile" uid="uid://c7i2ga12mhy2n" path="res://Assets/Fonts/CourierPixel.ttf" id="2_xqtbv"]
[ext_resource type="Texture2D" uid="uid://cxebpn6p8jhl6" path="res://Assets/on.png" id="3_t3chh"]
[ext_resource type="Texture2D" uid="uid://bgfn3vh2g48xj" path="res://Assets/off.png" id="4_pm22v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3chh"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.494118, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm22v"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.87451, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqnmu"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.87451, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t3chh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pm22v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jqnmu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nmitq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ug4i8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3s0o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w67m7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jh5w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4m2hm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_at6kh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tumjh"]

[node name="VolumeSlider" type="HSlider"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -8.0
offset_right = -1184.0
offset_bottom = -712.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("1_pm22v")
theme_override_icons/grabber_highlight = ExtResource("1_pm22v")
theme_override_icons/grabber_disabled = ExtResource("1_pm22v")
theme_override_styles/slider = SubResource("StyleBoxFlat_t3chh")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_pm22v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_jqnmu")
max_value = 1.0
step = 0.01
value = 0.5
script = ExtResource("1_0rqdt")

[node name="Value" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_right = 116.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0, 0.522189, 0, 1)
theme_override_fonts/font = ExtResource("2_xqtbv")
text = "100"

[node name="Mute" type="CheckButton" parent="."]
modulate = Color(0, 0.67451, 0, 1)
layout_mode = 0
offset_left = -16.0
offset_bottom = 16.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_t3chh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_pm22v")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jqnmu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nmitq")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ug4i8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_i3s0o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_w67m7")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_2jh5w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4m2hm")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_at6kh")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tumjh")
theme_override_icons/checked = ExtResource("3_t3chh")
theme_override_icons/unchecked = ExtResource("4_pm22v")
button_pressed = true

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
[connection signal="toggled" from="Mute" to="." method="_on_mute_toggled"]
